# ssb-handshake

./: .gitignore  .travis.yml  Cargo.toml  README.md
benches/: bench.rs
examples/: test_client.rs  test_server.rs
src/: bytes.rs  client.rs  crypto.rs  error.rs  lib.rs  messages.rs  server.rs  shared_key.rs  shared_secret.rs  sync.rs  util.rs  utils.rs
src/crypto/: keys.rs  message.rs  outcome.rs  shared_secret.rs
src/sync/: client.rs  server.rs  util.rs
tests/: example.rs
