[package]
name = "ssb-handshake"
version = "0.5.1"
authors = ["sean billig <sean.billig@gmail.com>"]
edition = "2018"
license = "LGPL-3.0"
description = "Secret-handshake protocol for Secure Scuttlebutt"
repository = "https://github.com/sunrise-choir/ssb-handshake"
documentation = "https://docs.rs/ssb-handshake/"
readme = "README.md"
keywords = ["secret-handshake", "handshake", "ssb", "scuttlebutt", "shs"]
include = ["src/**/*", "LICENSE", "README.md"]

[features]
default = ["std"]
std = ["futures-io", "futures-util", "ssb-crypto/getrandom", "genio/std"]

[dependencies]
futures-io = { version = "0.3.8", optional = true }
futures-util = { version = "0.3.8", optional = true }
ssb-crypto = { version = "0.2.2", default-features = false, features = ["dalek"] }
zerocopy = "0.3.0"
genio = { version = "0.2.1", default-features = false }

[dev-dependencies]
async-ringbuffer = "0.5.5"
hex = "0.4.2"
futures = "0.3.8"
readwrite = "0.1.2"
